src/app/shared/components/nav/nav.component.scss
@import "./../../../../variables.scss";

:host {
  height: 100%;
}

.sub {
  display: none;
}

@media screen and (max-width: 990px){
  .subMenu {
    display: none !important;
  }

  .menuBtn {
    display: flex;
  }

  nav {
    padding-top: 2rem;
    width: 100%;
    height: 100vh;
    flex-direction: column;
    position: absolute;
    left: 0;
    top: -3rem;
    background: $blue;
    display: none !important;
    z-index: 100;

    &.showMenu {
      display: flex !important;
    }

    button  {
      color: white;
      font-size: 2rem;
      padding: 0.85rem 1rem;
      display: flex;
      align-items: center;
      justify-content: center;

      .iconExpand {
        display: none;
      }
    }

    button.mobileSub {
      font-size: 2rem !important;
    }
  }
}

@media screen and (min-width: 990px) {
  nav {
    height: 100%;
  }

  .mobileSub {
    display: none !important;
  }

  .menuBtn {
    position: relative;
    height: 100%;
    color: $darkpurple;

    &.active {
      color: $blue;
    }

    &:hover {
      color: $blue;

      .sub {
        position: absolute;
        top: 100%;
        right: 0;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        background: white;
        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02),
        0px 0px 2px rgba(0, 0, 0, 0.05),
        0px 1px 4px rgba(0, 0, 0, 0.08);
        width: auto;
        white-space: nowrap;
        padding: 0.25rem 0;

        button {
          width: 100%;
          padding: 0.45rem 1rem;
          text-align: left;
          color: $darkpurple;

          &.active {
            font-weight: bold;
          }

          &:hover {
            background: $blue;
            color: white;
          }
        }
      }
    }
  }
}

